Add --enable-native-access=ALL-UNNAMED to default launch VM arguments
When the workspace default JRE is Java 24 or newer, new PDE launch
configurations (Eclipse application, OSGi framework, JUnit plug-in
tests) get --enable-native-access=ALL-UNNAMED in their initial VM
arguments. Because it lands in the Arguments tab like the other
defaults, users can edit or remove it per configuration. An existing
--enable-native-access argument in the target platform is respected.

Starting with JDK 24 (JEP 472) the JVM prints warnings like

  WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for
  callers in this module
  WARNING: Restricted methods will be blocked in a future release unless
  native access is enabled

whenever class-path code uses JNI, which every Eclipse application does
through SWT.

Assisted-by: Anthropic Claude Code (claude-fable-5-1)